--- a/composer.json
+++ b/composer.json
@@ -5,19 +5,24 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.3|^8.0",
-        "laravel/lumen-framework": "^8.0"
+        "php": "^7.2.5",
+        "firebase/php-jwt": "^5.2",
+        "guzzlehttp/guzzle": "^7.0",
+        "laravel/lumen-framework": "^7.0",
+        "ramsey/uuid": "^4.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
+        "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "phpunit/phpunit": "^9.3"
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
+        "classmap": [
+            "database/seeds",
+            "database/factories"
+        ],
         "psr-4": {
-            "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "App\\": "app/"
         }
     },
     "autoload-dev": {
