--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "firebase/php-jwt": "^5.2",
         "guzzlehttp/guzzle": "^7.0",
         "laravel/lumen-framework": "^7.0",
+        "phpoffice/phpspreadsheet": "^1.17",
         "pusher/pusher-php-server": "^5.0",
         "ramsey/uuid": "^4.0"
     },
